-(add) moving object

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,3 +9,9 @@
     /* background-repeat: repeat-y; */
     background-repeat: repeat;
 }
+
+.moving-object-mario-standing {
+    background-image: url("../images/mario-standing.png");
+    /* background-repeat: repeat-y; */
+    background-size: contain;
+}
