--- a/styles/game-ui-interface.css
+++ b/styles/game-ui-interface.css
@@ -1,5 +1,5 @@
 body {
-    margin:0px;
+    margin: 0px;
 }
 
 #screen {
@@ -7,5 +7,18 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    margin:0px;
+    margin: 0px;
+}
+
+.ui-log-panel {
+    position: absolute;
+    overflow: auto;
+    width: 400px;
+    height: 200px;
+    right: 0px;
+    top: 0px;
+    border: 1px solid black;
+    background-color: black;
+    opacity: .5;
+    color: white;
 }
