--- a/styles/game-ui-interface.css
+++ b/styles/game-ui-interface.css
@@ -13,8 +13,8 @@ body {
 .ui-log-panel {
     position: absolute;
     overflow: auto;
-    width: 400px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     right: 0px;
     top: 0px;
     border: 1px solid black;
